# server/routes/reservations.routes.js
@@ -2,7 +2,7 @@ const express = require("express");
 const router = express.Router();
 const reservationsController = require("../controllers/reservations.controller");
 
-router.get("/:reservationId", reservationsController.getReservation);
+router.get("/:reservationId", isAuthenticated, reservationsController.getReservation);
 router.get("/", reservationsController.listReservations);
 
 router.post("/", reservationsController.createReservation);
